2016-09-16  Peter Bergner <bergner@vnet.ibm.com>

	Apply from master.
	2016-09-14  Peter Bergner <bergner@vnet.ibm.com>

	* testsuite/gas/ppc/power9.d <slbiag, cpabort> New tests.
	<addex., brd, brh, brw, lwzmx, nandxor, rldixor, setbool,
	xor3, cp_abort, copy_first, paste, paste_last, sync>: Remove tests.
	<copy, paste.>: Update tests.
	* testsuite/gas/ppc/power9.s: Likewise.

2016-08-25  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	Backport from mainline
	2016-08-25  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	* config/tc-arm.c (v7m_psrs): Remove msp_s, MSP_S, psp_s and PSP_S
	special registers.
	* testsuite/gas/arm/archv8m-cmse-msr.s: Remove test for above special
	registers.
	* testsuite/gas/arm/archv8m-cmse-msr-base.d: Likewise.
	* testsuite/gas/arm/archv8m-cmse-msr-main.d: Likewise.
	* testsuite/gas/arm/archv8m-main-dsp-4.d: Likewise.

2016-08-03  Tristan Gingold  <gingold@adacore.com>

	* configure: Regenerate.

2016-08-03  Tristan Gingold  <gingold@adacore.com>

	* configure: Regenerate.

2016-07-01  Tristan Gingold  <gingold@adacore.com>

	* configure: Regenerate.

2016-07-01  Tristan Gingold  <gingold@adacore.com>

	* configure: Regenerate.

2016-07-01  Tristan Gingold  <gingold@adacore.com>

	* NEWS: Add marker for 2.27.

2016-07-01  Jan Beulich  <jbeulich@suse.com>

	* tc-i386.c (i386_index_check): Add special checks for bndmk,
	bndldx, and bndstx.
	* testsuite/gas/i386/mpx-inval-2.s: Add %rip and %eip relative
	as well as scaling by other than 1 tests.
	* testsuite/gas/i386/mpx-inval-2.l: Adjust accordingly.

2016-07-01  Jan Beulich  <jbeulich@suse.com>

	* tc-i386.c (md_assemble): Alter address size checking for MPX
	instructions.
	* testsuite/gas/i386/mpx-inval-2.s: New.
	* testsuite/gas/i386/mpx-inval-2.l: New.
	* testsuite/gas/i386/i386.exp: Run new test.

2016-07-01  Jan Beulich  <jbeulich@suse.com>

	PR gas/20318
	* config/tc-i386.c (match_template): Add char parameter,
	consumed in Intel mode for an extra suffix check.